api/analyzer/GolightParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Golight.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace analyzer {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GolightParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, TIPO=52, AC=53, 
		ENTERO=54, FLOTANTE=55, CADENA=56, BOOLEANO=57, RUNE=58, WS=59, COMENTARIOSIMPLE=60, 
		COMENTARIOMULTILINEA=61, PRINT=62, ID=63;
	public const int
		RULE_program = 0, RULE_contenido = 1, RULE_bloqueindependiente = 2, RULE_funciones = 3, 
		RULE_parametros = 4, RULE_declaracion = 5, RULE_slices = 6, RULE_expresion = 7, 
		RULE_println = 8, RULE_funcionesnativas = 9, RULE_incredecre = 10, RULE_secuenciascontrol = 11, 
		RULE_if = 12, RULE_switch = 13, RULE_casos = 14, RULE_for = 15, RULE_sentenciastransferencia = 16, 
		RULE_valores = 17, RULE_valor = 18;
	public static readonly string[] ruleNames = {
		"program", "contenido", "bloqueindependiente", "funciones", "parametros", 
		"declaracion", "slices", "expresion", "println", "funcionesnativas", "incredecre", 
		"secuenciascontrol", "if", "switch", "casos", "for", "sentenciastransferencia", 
		"valores", "valor"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'func'", "'('", "')'", "','", "'var'", "'='", "'[]'", 
		"'['", "']'", "'.'", "'!'", "'-'", "'*'", "'/'", "'%'", "'+'", "'<'", 
		"'<='", "'>='", "'>'", "'=='", "'!='", "'&&'", "'||'", "'strconv.Atoi'", 
		"'strconv.ParseFloat'", "'reflect.TypeOf'", "'slices.Index'", "'strings.join'", 
		"'len'", "'append'", "'++'", "'--'", "'+='", "'-='", "'if'", "'else if'", 
		"'else'", "'switch'", "'case'", "':'", "'default'", "'for'", "';'", "'range'", 
		"'break'", "'continue'", "'return'", "'nil'", null, "':='", null, null, 
		null, null, null, null, null, null, "'fmt.Println'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "TIPO", "AC", "ENTERO", "FLOTANTE", "CADENA", 
		"BOOLEANO", "RUNE", "WS", "COMENTARIOSIMPLE", "COMENTARIOMULTILINEA", 
		"PRINT", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Golight.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GolightParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GolightParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GolightParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext[] contenido() {
			return GetRuleContexts<ContenidoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext contenido(int i) {
			return GetRuleContext<ContenidoContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 38;
				contenido();
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -4048978215396416294L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContenidoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracionContext declaracion() {
			return GetRuleContext<DeclaracionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintlnContext println() {
			return GetRuleContext<PrintlnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncionesnativasContext funcionesnativas() {
			return GetRuleContext<FuncionesnativasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncionesContext funciones() {
			return GetRuleContext<FuncionesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SecuenciascontrolContext secuenciascontrol() {
			return GetRuleContext<SecuenciascontrolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SentenciastransferenciaContext sentenciastransferencia() {
			return GetRuleContext<SentenciastransferenciaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncredecreContext incredecre() {
			return GetRuleContext<IncredecreContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BloqueindependienteContext bloqueindependiente() {
			return GetRuleContext<BloqueindependienteContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		public ContenidoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contenido; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContenido(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContenidoContext contenido() {
		ContenidoContext _localctx = new ContenidoContext(Context, State);
		EnterRule(_localctx, 2, RULE_contenido);
		try {
			State = 52;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 43;
				declaracion();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 44;
				println();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 45;
				funcionesnativas();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 46;
				funciones();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 47;
				secuenciascontrol();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 48;
				sentenciastransferencia();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 49;
				incredecre();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 50;
				bloqueindependiente();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 51;
				expresion(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BloqueindependienteContext : ParserRuleContext {
		public BloqueindependienteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bloqueindependiente; } }
	 
		public BloqueindependienteContext() { }
		public virtual void CopyFrom(BloqueindependienteContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BloqueContext : BloqueindependienteContext {
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext[] contenido() {
			return GetRuleContexts<ContenidoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext contenido(int i) {
			return GetRuleContext<ContenidoContext>(i);
		}
		public BloqueContext(BloqueindependienteContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBloque(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BloqueindependienteContext bloqueindependiente() {
		BloqueindependienteContext _localctx = new BloqueindependienteContext(Context, State);
		EnterRule(_localctx, 4, RULE_bloqueindependiente);
		int _la;
		try {
			_localctx = new BloqueContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(T__0);
			State = 56;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 55;
				contenido();
				}
				}
				State = 58;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -4048978215396416294L) != 0) );
			State = 60;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncionesContext : ParserRuleContext {
		public FuncionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funciones; } }
	 
		public FuncionesContext() { }
		public virtual void CopyFrom(FuncionesContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FuncionconparametrosContext : FuncionesContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParametrosContext[] parametros() {
			return GetRuleContexts<ParametrosContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParametrosContext parametros(int i) {
			return GetRuleContext<ParametrosContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIPO() { return GetToken(GolightParser.TIPO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext[] contenido() {
			return GetRuleContexts<ContenidoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext contenido(int i) {
			return GetRuleContext<ContenidoContext>(i);
		}
		public FuncionconparametrosContext(FuncionesContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncionconparametros(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FuncionanonimaContext : FuncionesContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParametrosContext[] parametros() {
			return GetRuleContexts<ParametrosContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParametrosContext parametros(int i) {
			return GetRuleContext<ParametrosContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIPO() { return GetToken(GolightParser.TIPO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext[] contenido() {
			return GetRuleContexts<ContenidoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext contenido(int i) {
			return GetRuleContext<ContenidoContext>(i);
		}
		public FuncionanonimaContext(FuncionesContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncionanonima(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FuncionvaciaContext : FuncionesContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIPO() { return GetToken(GolightParser.TIPO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext[] contenido() {
			return GetRuleContexts<ContenidoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContenidoContext contenido(int i) {
			return GetRuleContext<ContenidoContext>(i);
		}
		public FuncionvaciaContext(FuncionesContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncionvacia(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncionesContext funciones() {
		FuncionesContext _localctx = new FuncionesContext(Context, State);
		EnterRule(_localctx, 6, RULE_funciones);
		int _la;
		try {
			State = 126;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				_localctx = new FuncionvaciaContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 62;
				Match(T__2);
				State = 63;
				expresion(0);
				State = 64;
				Match(T__3);
				State = 65;
				Match(T__4);
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==TIPO) {
					{
					State = 66;
					Match(TIPO);
					}
				}

				State = 69;
				Match(T__0);
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 70;
					contenido();
					}
					}
					State = 73;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -4048978215396416294L) != 0) );
				State = 75;
				Match(T__1);
				}
				break;
			case 2:
				_localctx = new FuncionconparametrosContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 77;
				Match(T__2);
				State = 78;
				expresion(0);
				State = 79;
				Match(T__3);
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 80;
					parametros();
					}
					}
					State = 83;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -8662673866201471920L) != 0) );
				State = 85;
				Match(T__4);
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==TIPO) {
					{
					State = 86;
					Match(TIPO);
					}
				}

				State = 89;
				Match(T__0);
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 90;
					contenido();
					}
					}
					State = 93;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -4048978215396416294L) != 0) );
				State = 95;
				Match(T__1);
				}
				break;
			case 3:
				_localctx = new FuncionanonimaContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 97;
				Match(T__2);
				State = 98;
				Match(T__3);
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 99;
					parametros();
					}
					}
					State = 102;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -8662673866201471920L) != 0) );
				State = 104;
				Match(T__4);
				State = 105;
				expresion(0);
				State = 106;
				Match(T__3);
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -8662673866201471920L) != 0)) {
					{
					State = 108;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 107;
						parametros();
						}
						}
						State = 110;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -8662673866201471920L) != 0) );
					}
				}

				State = 114;
				Match(T__4);
				State = 116;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==TIPO) {
					{
					State = 115;
					Match(TIPO);
					}
				}

				State = 118;
				Match(T__0);
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 119;
					contenido();
					}
					}
					State = 122;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -4048978215396416294L) != 0) );
				State = 124;
				Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametrosContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(GolightParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(GolightParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TIPO() { return GetTokens(GolightParser.TIPO); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIPO(int i) {
			return GetToken(GolightParser.TIPO, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpresionContext[] expresion() {
			return GetRuleContexts<ExpresionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpresionContext expresion(int i) {
			return GetRuleContext<ExpresionContext>(i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parametros; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParametros(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametrosContext parametros() {
		ParametrosContext _localctx = new ParametrosContext(Context, State);
		EnterRule(_localctx, 8, RULE_parametros);
		try {
			int _alt;
			State = 147;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,18,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 130;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 128;
						Match(ID);
						State = 129;
						Match(TIPO);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 132;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,14,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				State = 135;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,15,Context) ) {
				case 1:
					{
					State = 134;
					Match(T__5);
					}
					break;
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 138;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 137;
						expresion(0);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 140;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,16,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				State = 143;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,17,Context) ) {
				case 1:
					{
					State = 142;
					Match(T__5);
					}
					break;
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 145;
				Match(ID);
				State = 146;
				Match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
